# L2-sequencer-utils

./: Cargo.toml  readme.md
whitepaper/: 01-introduction.md  02-PoDT-abstract.md  02-PoRD-abstract.md  03-zk-randomness.md  04-history-and-motivation.md  sequencer.md
zk-logic/: Cargo.toml
zk-logic/src/: lib.rs  types.rs
zk-rand/: Cargo.toml
zk-rand/host/: Cargo.toml
zk-rand/host/src/: lib.rs  main.rs
zk-rand/prover/: Cargo.toml
zk-rand/prover/src/: lib.rs
zk-rand/zk-methods/: Cargo.toml
zk-rand/zk-methods/randomness/: Cargo.toml
zk-rand/zk-methods/randomness/src/: main.rs
